uodated the README file and hooks, basePage classes

--- a/src/main/resources/testdata.properties
+++ b/src/main/resources/testdata.properties
@@ -6,3 +6,5 @@ lastName=Tester
 zipCode=12456
 platformName=Android
 #platformName=iOS
+androidDeviceName=name of the desired device
+androidVersion=version of the desired device
